--- a/estilos.css
+++ b/estilos.css
@@ -1,14 +1,46 @@
 body {
     font-family: 'Open Sans', sans-serif;
+    color: #444;
+    line-height: 1.5;
 }
 
-.navsuperior {
+body h1 h2 h3 {
+    font-family: 'Montserrat', sans-serif;
+}
+
+.container {
+    width: 100%;
+    padding-right: 15px;
+    padding-left: 15px;
+    margin-right: auto;
+    margin-left: auto;
+}
+#header {
     background-color: white;
     border: 1px solid black;
+    height: 40px;
+    padding: 20px 0;
+    box-shadow: 0px 0px 30px rgba(127, 137, 161, 0.3);
 }
 
-
-h1 h2 h3 {
-    font-family: 'Montserrat', sans-serif;
-
+#header  .logo img {
+    width: 67px;
+    height: 26px;
+    box-sizing: border-box;
+    margin: 7px 0;
 }
+.fijotop{
+    position: fixed;
+    top: 0;
+    right: 0;
+    left: 0;
+}
+
+.navbar * {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+.navbar > ul > li {
+    float: left;
