--- a/estilos.css
+++ b/estilos.css
@@ -8,16 +8,39 @@ body h1 h2 h3 {
     font-family: 'Montserrat', sans-serif;
 }
 
+a {
+    text-decoration: none;
+    color: #007bff;
+}
+
 .container {
     width: 100%;
     padding-right: 15px;
     padding-left: 15px;
     margin-right: auto;
     margin-left: auto;
+    max-width: 1140px;
 }
+
+.float-left {
+    float: left;
+}
+
+.float-right {
+    float: right;
+}
+
+
+.fijotop{
+    position: fixed;
+    top: 0;
+    right: 0;
+    left: 0;
+}
+
+
 #header {
     background-color: white;
-    border: 1px solid black;
     height: 40px;
     padding: 20px 0;
     box-shadow: 0px 0px 30px rgba(127, 137, 161, 0.3);
@@ -29,18 +52,35 @@ body h1 h2 h3 {
     box-sizing: border-box;
     margin: 7px 0;
 }
-.fijotop{
-    position: fixed;
-    top: 0;
-    right: 0;
-    left: 0;
-}
+
+
+
 
 .navbar * {
     list-style: none;
     margin: 0;
     padding: 0;
+    
 }
 
+.navbar ul {
+    display: block;
+}
 .navbar > ul > li {
     float: left;
+}
+
+.navbar a {
+    display: block;
+    position: relative;
+    color: #004289;
+    padding: 10px 15px;
+    transition: 0.3s;
+    font-size: 14px;
+    font-family: "Montserrat", sans-serif;
+    font-weight: bold;
+}
+
+.navbar a:hover {
+    color: #007bff;
+}
