--- a/estilos.css
+++ b/estilos.css
@@ -84,3 +84,13 @@ a {
 .navbar a:hover {
     color: #007bff;
 }
+
+.desplegable ul {
+    display: block;
+    position: absolute;
+    padding: 10px 0;
+    background: #fff;
+    box-shadow: 0px 0px 30px rgba(127, 137, 161, 0.25);
+    transition: ease all 0.3s;
+}
+}
