--- a/estilos.css
+++ b/estilos.css
@@ -52,15 +52,11 @@ a {
     box-sizing: border-box;
     margin: 7px 0;
 }
-
-
-
-
 .navbar * {
     list-style: none;
     margin: 0;
     padding: 0;
-    
+   
 }
 
 .navbar ul {
@@ -84,6 +80,7 @@ a {
 .navbar a:hover {
     color: #007bff;
 }
+/* ver que onda esto, no tengo ni idea qué estoy haciendo (?) */
 
 .desplegable ul {
     display: block;
