--- a/estilos.css
+++ b/estilos.css
@@ -1,3 +1,4 @@
+/* -------------------------------------------------------- */
 body {
     font-family: 'Open Sans', sans-serif;
     color: #444;
@@ -12,14 +13,18 @@ a {
     text-decoration: none;
     color: #007bff;
 }
+/*---------------------------------------------------------------*/
+/*-----------------------------------------------------------------*/
+
 
 .container {
     width: 100%;
-    padding-right: 15px;
+    padding-right: 50px;
     padding-left: 15px;
     margin-right: auto;
     margin-left: auto;
     max-width: 1140px;
+    box-sizing: border-box;
 }
 
 .float-left {
@@ -37,13 +42,15 @@ a {
     right: 0;
     left: 0;
 }
-
+/*********************** H E A  D E R ************************/
+/*************************************************************/
 
 #header {
     background-color: white;
-    height: 40px;
+    height: 80px;
     padding: 20px 0;
     box-shadow: 0px 0px 30px rgba(127, 137, 161, 0.3);
+    box-sizing: border-box;
 }
 
 #header  .logo img {
@@ -51,19 +58,28 @@ a {
     height: 26px;
     box-sizing: border-box;
     margin: 7px 0;
+    padding: 0;
 }
+
+/*********** BARRRA NAVEGACION ********/
+/**************************************/
+
+
 .navbar * {
     list-style: none;
     margin: 0;
     padding: 0;
-   
+}
+
+
+.navbar > ul > li {
+    float: left;
+    position: relative;
+ 
 }
 
 .navbar ul {
     display: block;
-}
-.navbar > ul > li {
-    float: left;
 }
 
 .navbar a {
@@ -74,20 +90,34 @@ a {
     transition: 0.3s;
     font-size: 14px;
     font-family: "Montserrat", sans-serif;
-    font-weight: bold;
+    font-weight: 500;
 }
 
 .navbar a:hover {
     color: #007bff;
 }
-/* ver que onda esto, no tengo ni idea qué estoy haciendo (?) */
 
-.desplegable ul {
+.navbar .desplegable ul {
     display: block;
     position: absolute;
     padding: 10px 0;
     background: #fff;
+    opacity: 0;
     box-shadow: 0px 0px 30px rgba(127, 137, 161, 0.25);
     transition: ease all 0.3s;
+    left: 0;
+    visibility: hidden;
+
 }
-}
+
+.navbar .desplegable:hover > ul {
+    opacity: 1;
+    top: 100%;
+    visibility: visible;
+  }
+
+  .navbar .desplegable li {
+    width: 180px;
+    position: relative;
+  }
+  
