--- a/estilos.css
+++ b/estilos.css
@@ -3,6 +3,7 @@ body {
     font-family: 'Open Sans', sans-serif;
     color: #444;
     line-height: 1.5;
+    margin: 0;
 }
 
 body h1 h2 h3 {
@@ -121,3 +122,27 @@ a {
     position: relative;
   }
   
+  /*---------------------------------------------------------
+  ---------------- F O O T E R ------------------------------*
+  ----------------------------------------------------------*/
+  
+  .footer {
+      background-color: #00428a;
+      height: 200px;
+      color: #eee;
+      font-size: 14px;
+      padding: 0 0 30px 0;
+
+  }
+
+  .footer .footertop {
+    background: #004a99;
+  
+    padding: 0;
+    width: 100%;
+  }
+
+  .footer .footerbot {
+      padding: 0;
+      text-align: center;
+  }
