--- a/estilo.css
+++ b/estilo.css
@@ -1,7 +1,7 @@
 /*----se usa solo en el body, la parte de copyright tiene fondo transparente y se ve este color ---*/
 /*---botones, links----*/
 body {
-  background-color: pink;
+  background-color: violet;
 }
 
 /*# sourceMappingURL=estilo.css.map */
