Archivos sass importados en el all

--- a/all.scss
+++ b/all.scss
@@ -1,3 +1,10 @@
 @import 'sass/variables';
-@import 'sass/main'
-
+@import 'sass/main';
+@import './sass/layout/nav01';
+@import './sass/layout/home02';
+@import './sass/layout/footer08';
+@import './sass/sections/aboutus03';
+@import './sass/sections/services04';
+@import './sass/sections/porftolio05';
+@import './sass/sections/team06';
+@import './sass/sections/dropdown07';
