--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -3,5 +3,12 @@ $fondo: #004a99;
 $fondo_oscuro: #00428a;
 /*----se usa solo en el body, la parte de copyright tiene fondo transparente y se ve este color ---*/ 
 
+$fondo_claro: #ecf5ff;
+
 $acentos: #007bff;
 /*---botones, links----*/
+
+$fuentegeneral: "Open Sans", sans-serif;
+
+$fuentetitulos: "Montserrat", sans-serif;
+
