--- a/estilo.css
+++ b/estilo.css
@@ -1,7 +1,24 @@
 /*----se usa solo en el body, la parte de copyright tiene fondo transparente y se ve este color ---*/
 /*---botones, links----*/
+/* -------------------------------------------------------- */
 body {
-  background-color: violet;
+  font-family: "Open Sans", sans-serif;
+  color: #444;
+  background-color: #00428a;
+}
+body a {
+  text-decoration: none;
+  color: #007bff;
+}
+
+.fondoblanco {
+  background-color: white;
+  color: #00428a;
+}
+
+.fondoceleste {
+  background-color: #ecf5ff;
+  color: #00428a;
 }
 
 /*# sourceMappingURL=estilo.css.map */
