--- a/estilo.css
+++ b/estilo.css
@@ -5,6 +5,8 @@ body {
   font-family: "Open Sans", sans-serif;
   color: #444;
   background-color: #00428a;
+  margin: 0;
+  padding: 20px;
 }
 body a {
   text-decoration: none;
@@ -19,6 +21,87 @@ body a {
 .fondoceleste {
   background-color: #ecf5ff;
   color: #00428a;
+}
+
+.flex {
+  display: flex;
+}
+
+.left {
+  float: left;
+}
+
+.right {
+  float: right;
+}
+
+.container {
+  width: 100%;
+  padding-right: 50px;
+  padding-left: 15px;
+  margin-right: auto;
+  margin-left: auto;
+  max-width: 1140px;
+  box-sizing: border-box;
+}
+
+#nav {
+  position: fixed;
+  top: 0;
+  right: 0;
+  left: 0;
+  width: 100%;
+  padding: 15px;
+  z-index: 997;
+}
+#nav .img {
+  max-height: 26px;
+}
+
+/*--------------M O B I LE -----------------*/
+.navmenu-mobile-overlay {
+  width: 100%;
+  height: 100%;
+  z-index: 9997;
+  top: 0;
+  left: 0;
+  background: rgba(19, 39, 57, 0.8);
+  display: none;
+}
+
+.navmenu-mobile {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  z-index: 9999;
+  left: -260px;
+  width: 260px;
+  padding-top: 18px;
+  background: rgba(19, 39, 57, 0.8);
+  transition: 0.4s;
+}
+
+.togglemenu {
+  position: fixed;
+  right: 0;
+  top: 0;
+  z-index: 9998;
+  border: 0;
+  background: none;
+  font-size: 24px;
+  transition: all 0.4s;
+  text-align: right;
+}
+.togglemenu:active ~ .navmenu-mobile {
+  left: 0;
+}
+.togglemenu:active ~ .navmenu-mobile-overlay {
+  display: block;
+}
+
+/*------desktop only----*/
+.navmenu-desktop {
+  display: none;
 }
 
 /*# sourceMappingURL=estilo.css.map */
