--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -1,7 +1,7 @@
 /* -------------------------------------------------------- */
 body {
     font-family: $fuentegeneral;
-    color: #444;
+    color: #444444;
     background-color: $fondo_oscuro; 
 
     a {
@@ -18,4 +18,8 @@ body {
 .fondoceleste {
     background-color: $fondo_claro;
     color: $fondo_oscuro; 
+}
+
+.flex {
+    display: flex;
 }
