problema con los imports

--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -1,4 +1,6 @@
 /* -------------------------------------------------------- */
+@import 'sass/all';
+
 body {
     font-family: $fuentegeneral;
     
