Empezando el 1er dropdown

--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -5,9 +5,13 @@ body {
     background-color: $fondo_oscuro; 
     margin: 0;
     padding: 20px;
+
     a {
     text-decoration: none;
     color: $acentos;
+    }
+    ul{
+        list-style: none;
     }
 }
  
