--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -1,15 +1,15 @@
 $fondo: #004a99;
-
+$fondo_overlay: rgba(19, 39, 57, 0.8);
 $fondo_oscuro: #00428a;
-/*----se usa solo en el body, la parte de copyright tiene fondo transparente y se ve este color ---*/ 
-
 $fondo_claro: #ecf5ff;
 
+
+$color_iconos:004289;
 $acentos: #007bff;
+
 /*---botones, links----*/
 
 $fuentegeneral: "Open Sans", sans-serif;
-
 $fuentetitulos: "Montserrat", sans-serif;
 
  
