--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -1,7 +1,7 @@
 /* -------------------------------------------------------- */
 body {
     font-family: $fuentegeneral;
-    color: #444444;
+    color: white;
     background-color: $fondo_oscuro; 
     margin: 0;
     padding: 20px;
