--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -2,7 +2,8 @@ $fondo: #004a99;
 $fondo_overlay: rgba(19, 39, 57, 0.8);
 $fondo_oscuro: #00428a;
 $fondo_claro: #ecf5ff;
-
+$colortitulos: #444444;
+$colorletra: #556877;
 
 $color_iconos:#004289;
 $acentos: #007bff;
