--- a/sass/layout/_nav01.scss
+++ b/sass/layout/_nav01.scss
@@ -7,6 +7,7 @@
     width: 100%;
     padding: 15px;
    z-index: 997;
+   box-shadow: 0px 0px 30px rgba(127, 137, 161, 0.3);
 
     .img {
         max-height: 26px;
