--- a/estilo.css
+++ b/estilo.css
@@ -65,6 +65,7 @@ body h3 {
   width: 100%;
   padding: 15px;
   z-index: 997;
+  box-shadow: 0px 0px 30px rgba(127, 137, 161, 0.3);
 }
 #nav .img {
   max-height: 26px;
