--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -4,7 +4,7 @@ $fondo_oscuro: #00428a;
 $fondo_claro: #ecf5ff;
 $colortitulos: #444444;
 $colorletra: #556877;
-
+$colorsubtitulos: #283d50;
 $color_iconos:#004289;
 $acentos: #007bff;
 
