--- a/sass/all.scss
+++ b/sass/all.scss
@@ -7,4 +7,4 @@
 @import 'sections/services04';
 @import 'sections/porftolio05';
 @import 'sections/team06';
-@import 'sections/dropdown07';
+@import 'sections/whyus07';
