--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -43,6 +43,9 @@ body {
     display: flex;
 }
 
+.wrap {
+    flex-wrap: wrap;
+}
 .fullcentrado {
     justify-content: center;
     align-items: center;
@@ -55,6 +58,11 @@ body {
     float: right;
 }
   
+
+.text-center {
+    text-align: center;
+}
+
 .container {
     width: 100%;
     padding-right: 50px;
