--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -2,12 +2,13 @@ $fondo: #004a99;
 $fondo_overlay: rgba(19, 39, 57, 0.8);
 $fondo_oscuro: #00428a;
 $fondo_claro: #ecf5ff;
+$fondo_card: #00458f;
+$fondo_cardhover: #003b7a;
 $colortitulos: #444444;
 $colorletra: #556877;
 $colorsubtitulos: #283d50;
 $color_iconos:#004289;
 $acentos: #007bff;
-
 /*---botones, links----*/
 
 $fuentegeneral: "Open Sans", sans-serif;
