Section why us ultimando detalles

--- a/sass/sections/_whyus07.scss
+++ b/sass/sections/_whyus07.scss
@@ -1,6 +1,7 @@
 #why-us {
     padding: 24px 0;
     background-color: $fondo;
+
     h3 {
         color: white;
     }
@@ -9,7 +10,7 @@
     }
     p{
         font-size: 15px;
-        
+        margin: 10px 10px 60px;
     }
     .card {
         background-color: $fondo_card;
