--- a/estilo.css
+++ b/estilo.css
@@ -41,6 +41,10 @@ body h4 {
   display: flex;
 }
 
+.columna {
+  flex-direction: column;
+}
+
 .wrap {
   flex-wrap: wrap;
 }
@@ -240,6 +244,71 @@ body h4 {
 #about-us-sec2 h4 {
   font-weight: 600;
   font-size: 24px;
+}
+
+#portfolio .filtros ul {
+  flex-wrap: nowrap;
+  padding: 0;
+  justify-content: space-around;
+}
+#portfolio .filtros ul li {
+  border-radius: 50px;
+  background-color: #ecf5ff;
+  font-size: 12px;
+  color: #007bff;
+  padding: 6px 20px;
+  margin: 15px 15px 5px 0;
+}
+#portfolio .filtros ul li:hover {
+  background-color: #007bff;
+  color: white;
+}
+#portfolio .filtros ul li:last-child {
+  margin-right: 0;
+}
+#portfolio .filtros ul li:first-child {
+  background-color: #007bff;
+  color: white;
+}
+#portfolio .portfolio-content .portfolio-item {
+  position: relative;
+  border-radius: 7px;
+  overflow: hidden;
+  margin-bottom: 30px;
+  height: 250px;
+}
+#portfolio .portfolio-content .portfolio-item img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+#portfolio .portfolio-content .portfolio-item .portfolio-item-hover {
+  display: none;
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  color: white;
+  background-color: rgba(19, 39, 57, 0.8);
+}
+#portfolio .portfolio-content .portfolio-item .portfolio-item-hover span {
+  border-radius: 50%;
+  background-color: #007bff;
+  color: white;
+  padding: 5px;
+  margin: 4px;
+  text-align: center;
+  font-size: 22px;
+  width: 35px;
+  height: 35px;
+}
+#portfolio .portfolio-content .portfolio-item .portfolio-item-hover h4 {
+  color: white;
+  margin: 0;
+}
+#portfolio .portfolio-content .portfolio-item:hover > .portfolio-item-hover {
+  display: flex;
 }
 
 #why-us {
