--- a/estilo.css
+++ b/estilo.css
@@ -19,6 +19,7 @@ body h3 {
   font-size: 36px;
   font-family: "Montserrat", sans-serif;
   color: #444444;
+  font-weight: 500;
 }
 body h4 {
   font-family: "Montserrat", sans-serif;
@@ -34,7 +35,7 @@ body h4 {
 
 .fondoceleste {
   background-color: #ecf5ff;
-  color: #00428a;
+  color: #444444;
 }
 
 .roundbuttons {
@@ -231,71 +232,6 @@ body h4 {
   display: none;
 }
 
-.footer .footertop {
-  padding-top: 30px;
-  padding-bottom: 30px;
-  background-color: #004a99;
-}
-.footer h3 {
-  color: white;
-  font-weight: 400;
-  letter-spacing: 3px;
-}
-.footer h4 {
-  color: white;
-  font-size: 14px;
-  text-transform: uppercase;
-  font-weight: bold;
-}
-.footer p {
-  color: #ecf5ff;
-  line-height: 24px;
-  font-size: 14px;
-  margin-bottom: 30px;
-}
-.footer ul {
-  padding-left: 0;
-  font-size: 14px;
-}
-.footer ul a {
-  color: #ecf5ff;
-}
-.footer ul li {
-  padding: 8px 0px;
-}
-.footer .waynefamily p {
-  font-family: "Montserrat", sans-serif;
-  font-size: 13px;
-}
-.footer .contacto p {
-  font-size: 14px;
-  line-height: 26px;
-}
-.footer .contacto .socialbuttons .social {
-  font-size: 18px;
-  padding: 0;
-}
-.footer form {
-  flex-wrap: nowrap;
-}
-.footer form input {
-  box-sizing: border-box;
-  border: 0;
-  padding: 6px 8px;
-  width: 65%;
-}
-.footer form .button {
-  width: 35%;
-  font-size: 15px;
-}
-.footer .footerbot {
-  font-size: 14px;
-  padding: 30px 0;
-}
-.footer .footerbot span:last-child {
-  font-size: 13px;
-}
-
 #about-us header {
   font-size: 15px;
   color: #556877;
@@ -399,6 +335,43 @@ body h4 {
   display: flex;
 }
 
+#testimonials {
+  box-shadow: inset 0px 0px 12px 0px rgba(0, 0, 0, 0.1);
+}
+#testimonials .testimonios .item-testimonials img {
+  border-radius: 50%;
+  width: 150px;
+}
+#testimonials .testimonios .item-testimonials h3 {
+  font-size: 20px;
+  color: black;
+  font-weight: 600;
+  margin-bottom: 5px;
+}
+#testimonials .testimonios .item-testimonials h4 {
+  font-size: 14px;
+  color: grey;
+  font-weight: 400;
+  margin: 0 0 15px;
+}
+#testimonials .testimonios .item-testimonials p {
+  font-style: italic;
+  margin-bottom: 15px;
+}
+#testimonials .testimonios .dots {
+  margin: 40px;
+}
+#testimonials .testimonios .dots .dot {
+  background-color: #ddd;
+  border-radius: 50%;
+  width: 12px;
+  height: 12px;
+  margin: 5px;
+}
+#testimonials .testimonios .dots .dot:hover {
+  background-color: #007bff;
+}
+
 #why-us {
   padding: 24px 0;
   background-color: #004a99;
@@ -449,6 +422,71 @@ body h4 {
   display: block;
   font-size: 48px;
   font-weight: bold;
+}
+
+.footer .footertop {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background-color: #004a99;
+}
+.footer h3 {
+  color: white;
+  font-weight: 400;
+  letter-spacing: 3px;
+}
+.footer h4 {
+  color: white;
+  font-size: 14px;
+  text-transform: uppercase;
+  font-weight: bold;
+}
+.footer p {
+  color: #ecf5ff;
+  line-height: 24px;
+  font-size: 14px;
+  margin-bottom: 30px;
+}
+.footer ul {
+  padding-left: 0;
+  font-size: 14px;
+}
+.footer ul a {
+  color: #ecf5ff;
+}
+.footer ul li {
+  padding: 8px 0px;
+}
+.footer .waynefamily p {
+  font-family: "Montserrat", sans-serif;
+  font-size: 13px;
+}
+.footer .contacto p {
+  font-size: 14px;
+  line-height: 26px;
+}
+.footer .contacto .socialbuttons .social {
+  font-size: 18px;
+  padding: 0;
+}
+.footer form {
+  flex-wrap: nowrap;
+}
+.footer form input {
+  box-sizing: border-box;
+  border: 0;
+  padding: 6px 8px;
+  width: 65%;
+}
+.footer form .button {
+  width: 35%;
+  font-size: 15px;
+}
+.footer .footerbot {
+  font-size: 14px;
+  padding: 30px 0;
+}
+.footer .footerbot span:last-child {
+  font-size: 13px;
 }
 
 /*# sourceMappingURL=estilo.css.map */
