empezando con el tp seccion home

--- a/sass/layout/_home02.scss
+++ b/sass/layout/_home02.scss
@@ -1,7 +1,7 @@
 @import '../variables';
 
 #home{
-    background: white;
+    background: url(imagenes/intro-bg.png);
     font-family: $fuentegeneral;
     h1{
         color: white;
