funcionaa, puedo morir en paz

--- a/sass/layout/_home02.scss
+++ b/sass/layout/_home02.scss
@@ -1,9 +1,5 @@
 @import '../variables';
 
 #home{
-    background: url(imagenes/intro-bg.png);
-    font-family: $fuentegeneral;
-    h1{
-        color: white;
-    }
+    background:pink;
 }
