--- a/estilo.css
+++ b/estilo.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 /*---botones, links----*/
 /* -------------------------------------------------------- */
 body {
@@ -228,10 +229,64 @@ body h4 {
 }
 
 /*-------desktop only-------------------------*/
-.navmenu-desktop {
-  display: none;
-}
+@media (min-width: 992px) {
+  .togglemenu {
+    display: none;
+  }
 
+  .navmenu-mobile {
+    display: none;
+  }
+
+  #nav {
+    align-items: center;
+  }
+  #nav .container {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+  #nav .navmenu-desktop {
+    height: 50px;
+  }
+  #nav .navmenu-desktop ul {
+    display: block;
+  }
+  #nav .navmenu-desktop ul li {
+    float: left;
+    position: relative;
+    margin: 0px 15px 15px 15px;
+  }
+  #nav .navmenu-desktop a {
+    font-size: 14px;
+    font-family: "Montserrat", sans-serif;
+    font-weight: 500;
+  }
+  #nav .navmenu-desktop a:hover {
+    color: #007bff;
+  }
+  #nav .navmenu-desktop .desplegable {
+    display: block;
+    position: absolute;
+    padding: 10px 0;
+    background: #fff;
+    opacity: 0;
+    box-shadow: 0px 0px 30px rgba(127, 137, 161, 0.25);
+    transition: ease all 0.3s;
+    left: 0;
+    visibility: hidden;
+  }
+  #nav .navmenu-desktop .desplegable:hover > ul {
+    opacity: 1;
+    top: 100%;
+    visibility: visible;
+  }
+  #nav .navmenu-desktop .desplegable li {
+    width: 180px;
+    position: relative;
+  }
+}
+/* ver que onda esto, no tengo ni idea qué estoy haciendo (?) */
 #about-us header {
   font-size: 15px;
   color: #556877;
