--- a/sass/all.scss
+++ b/sass/all.scss
@@ -1,5 +1,6 @@
 @import 'variables';
 @import 'main';
+@import 'mixins';
 @import 'layout/nav01';
 @import 'layout/home02';
 @import 'sections/aboutus03';
