--- a/estilo.css
+++ b/estilo.css
@@ -8,6 +8,7 @@ body {
   background-color: #00428a;
   margin: 0;
   width: 100%;
+  line-height: 1.5;
 }
 body a {
   text-decoration: none;
@@ -21,12 +22,14 @@ body h3 {
   font-family: "Montserrat", sans-serif;
   color: #444444;
   font-weight: 500;
+  margin: 0 0 20px 0;
 }
 body h4 {
   font-family: "Montserrat", sans-serif;
   color: #283d50;
   font-size: 18px;
   font-weight: 600;
+  margin: 0 0 20px 0;
 }
 
 .fondoblanco {
@@ -103,8 +106,17 @@ body h4 {
 }
 
 .seccion {
-  padding: 24px 15px;
   text-align: center;
+  padding: 60px 0;
+}
+.seccion header p {
+  margin: auto;
+  padding-bottom: 60px;
+}
+@media (min-width: 992px) {
+  .seccion header p {
+    width: 50%;
+  }
 }
 
 #nav {
@@ -315,9 +327,18 @@ body h4 {
   }
 }
 /* ver que onda esto, no tengo ni idea qué estoy haciendo (?) */
+#about-us {
+  text-align: left;
+}
 #about-us header {
   font-size: 15px;
   color: #556877;
+  text-align: center;
+  display: block;
+}
+#about-us h4 {
+  font-weight: 600;
+  font-size: 24px;
 }
 
 .imgcontainer {
@@ -330,7 +351,6 @@ body h4 {
 }
 
 .itemaboutus {
-  text-align: left;
   padding-bottom: 30px;
 }
 .itemaboutus .icon {
@@ -356,14 +376,46 @@ body h4 {
   color: white;
 }
 
-#about-us-sec2 {
-  text-align: left;
-}
-#about-us-sec2 h4 {
-  font-weight: 600;
-  font-size: 24px;
+#about-us-sec1 h4 {
+  font-size: 18px;
 }
 
+@media (min-width: 992px) {
+  #about-us-sec1, #about-us-sec2, #about-us-sec3 {
+    margin-right: -15px;
+    margin-left: -15px;
+    display: flex;
+    flex-wrap: wrap;
+    margin-bottom: 30px;
+  }
+  #about-us-sec1 .about-us-columna, #about-us-sec2 .about-us-columna, #about-us-sec3 .about-us-columna {
+    width: 50%;
+    box-sizing: border-box;
+    order: 1;
+    padding: 0 15px;
+  }
+  #about-us-sec1 .imgcontainer, #about-us-sec2 .imgcontainer, #about-us-sec3 .imgcontainer {
+    width: 50%;
+    box-sizing: border-box;
+    order: 2;
+    margin-top: 30px;
+  }
+
+  #about-us-sec2 {
+    margin-bottom: 60px;
+  }
+  #about-us-sec2 .imgcontainer {
+    order: 1;
+    margin-top: 0px;
+  }
+  #about-us-sec2 .about-us-columna {
+    order: 2;
+  }
+
+  #about-us-sec3 .imgcontainer {
+    margin-top: 0;
+  }
+}
 #portfolio .filtros ul {
   flex-wrap: nowrap;
   padding: 0;
