--- a/sass/sections/_aboutus03.scss
+++ b/sass/sections/_aboutus03.scss
@@ -1,7 +1,18 @@
-#about-us {
+#about-us {    
+    text-align: left;
+
+
     header {
         font-size:15px;
         color: $colorletra;
+        text-align: center;
+        display: block;
+     
+    }
+    h4{
+        font-weight: 600;
+        font-size: 24px;
+
     }
 }
 
@@ -17,7 +28,6 @@
 
 
 .itemaboutus {
-    text-align: left;
     padding-bottom: 30px;
         
     .icon {
@@ -49,11 +59,53 @@
     }
 }
 
-#about-us-sec2{
-    text-align: left;
-    h4{
-        font-weight: 600;
-        font-size: 24px;
 
+#about-us-sec1 {
+    
+    h4 {
+        font-size: 18px;
     }
 }
+@include desktop {
+        
+    #about-us-sec1, #about-us-sec2, #about-us-sec3 {    
+        margin-right: -15px;
+        margin-left: -15px;
+        display: flex;
+        flex-wrap: wrap;
+        margin-bottom: 30px;
+
+
+        .about-us-columna {
+            width: 50%;
+            box-sizing: border-box;
+            order: 1;
+            padding: 0 15px;
+        }
+
+        .imgcontainer {
+            width: 50%;
+            box-sizing: border-box;
+            order: 2; 
+            margin-top: 30px;
+        }
+    }
+
+    
+    #about-us-sec2 {
+        margin-bottom: 60px;
+        .imgcontainer {
+            order: 1;
+            margin-top: 0px;
+        }
+        .about-us-columna {
+            order: 2;
+        }
+    }
+
+    #about-us-sec3 {
+        .imgcontainer {
+            margin-top: 0;
+        }
+    }
+}  
